# ludum_dare_56

./: Cargo.toml  README.md
assets/models/: world.blend  world.blend1
src/: billboard.rs  camera.rs  dialog.rs  interactable.rs  main.rs  npc.rs  world.rs
src/bugoid/: mod.rs
src/embedded_assets/: mod.rs
src/embedded_assets/dialog/: dialog.yarn
src/embedded_assets/models/: world.glb
src/player/: mod.rs
src/quests/: mod.rs
src/ui/: dialog_box.rs  main_menu.rs  mod.rs  pause_menu.rs
