[package]
name = "ludum_dare_56"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
leafwing-input-manager = "0.15"
avian3d = "0.1"
bevy-tnua = "0.19"
bevy-tnua-avian3d = "0.1"
bevy_yarnspinner = "0.3"

[dependencies.bevy]
version = "0.14"

[dependencies.bevy_egui]
version = "0.30"
